samples/_failures_safe/1761150744_2d8725_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7de9c95.c: In function ‘main’:
./samples/SAFE/__tmp_e7de9c95.c:153:9: error: expected declaration or statement at end of input
  153 |         if (result.compressed_size > 0 && result.original_size > 0) {
      |         ^~
./samples/SAFE/__tmp_e7de9c95.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7de9c95.c:153:9: error: expected declaration or statement at end of input
